changed main page

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -2,11 +2,18 @@
 <html>
 <head>
   <title>
-    Title for this Page Goes Here
+	MEET the world
   </title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
   
-  
+  <h1>Breaking Stereotypes</h1>
+<h2>One photo equals thousand words</h2>
+
+
+<img id ="bala" class= "image" src="http://www.jackkornfield.com/jk/wp-content/uploads/2014/08/peace1.jpg">
+<h4>Israeli and Palestinian can be friends</h4>
+<button type="button" >Agree</button>
+<!-- dsrfjs;d'ljf;sdjlg;'sjd -->
 </head>
 
 <body>
