made a page and a css file

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -9,11 +9,11 @@
   <h1>Breaking Stereotypes</h1>
 <h2>One photo equals thousand words</h2>
 
-
-<img id ="bala" class= "image" src="http://www.jackkornfield.com/jk/wp-content/uploads/2014/08/peace1.jpg">
+<!-- photos -->
+<img id ="israel_and_palestinian" class= "image" src="http://www.jackkornfield.com/jk/wp-content/uploads/2014/08/peace1.jpg">
 <h4>Israeli and Palestinian can be friends</h4>
 <button type="button" >Agree</button>
-<!-- dsrfjs;d'ljf;sdjlg;'sjd -->
+
 </head>
 
 <body>
