--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,15 +4,28 @@
   <title>
 	MEET the world
   </title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+  <link rel=stylesheet type=text/css href="../static/main-page.css">
   
   <h1>Breaking Stereotypes</h1>
 <h2>One photo equals thousand words</h2>
 
 <!-- photos -->
-<img id ="israel_and_palestinian" class= "image" src="http://www.jackkornfield.com/jk/wp-content/uploads/2014/08/peace1.jpg">
+<img id ="israel_and_palestinian" class= "image" src="palestinian and israeli can be friend.jpg">
 <h4>Israeli and Palestinian can be friends</h4>
 <button type="button" >Agree</button>
+
+<img id ="young-women-driver.jpg" class= "image" src="young-women-driver.jpg">
+<h4>Israeli and Palestinian can be friends</h4>
+<button type="button" >Agree</button>
+
+
+<img id ="dancer" class= "image" src="dancer.jpg">
+<h4>Dance is for everyone</h4>
+<button type="button" >Agree</button>
+
+
+
+
 
 </head>
 
