--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -4,7 +4,7 @@
 
 <h1> MEET the world !</h1>
 
-<h4> Stereotype Breakers </h4>
+<h4> #Stereotype Breakers </h4>
 
 <title> MEET the world  </title>
 
@@ -15,13 +15,42 @@
   
 </head>
 <br>
-<br>
-<br>
 <body>
 <input type="submit" value="Sign In" >
 
-<input type="submit" value="Sign UP" >
+<input type="submit" value="Sign Up" >
+<br>
+<br>
+<br>
 
+<div class = "Black and White">
+<img class = "people_image" src = "BLACKANDWHITEPEOPLE.jpg" alt = "picture of black and white people"  height="300" width="400">
+<h4>#Friendships have no colors!</h4>
+
+<div class = "Religions">
+<img class = "people_image" src = "religions.jpg" alt = "picture of Religions"  height="300" width="400">
+<h4>#I don't care what's his religion.He's still my friend!</h4>
+
+<div class = "Nationality">
+<img class = "people_image" src = "palestineandisrael.jpg" alt = "picture of peace"  height="300" width="400">
+<h4>#We still live in the same state!</h4>
+
+<div class = "rainbow">
+<img class = "people_image" src = "GAYS.jpg" alt = "picture of rainbow flag"  height="300" width="400">
+<h4>#We can accept each other <3 !</h4>
+
+<div class = "genders">
+<img class = "people_image" src = "genders.jpg" alt = "picture of genders"  height="300" width="400">
+<h4>#Meet the opposet gender !</h4>
+
+
+
+
+
+
+		
+	
+</div>
 
 </body>
 
