--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,23 +5,53 @@
 	MEET the world
   </title>
   <link rel=stylesheet type=text/css href="../static/main-page.css">
-  
-  <h1>Breaking Stereotypes</h1>
-<h2>One photo equals thousand words</h2>
+
+  <form method="get" action="{{url_for('gotofrontpage')}}">
+    <button type="submit">About Us</button>
+</form>
+
+
+  <h1 id="title">Breaking Stereotypes</h1>
+<h2 id="Title">One photo equals thousand words</h2>
 
 <!-- photos -->
-<img id ="israel_and_palestinian" class= "image" src="palestinian and israeli can be friend.jpg">
+<div class="photobox"><img  class= "image" src="palastinian_and_israeli.jpg">
 <h4>Israeli and Palestinian can be friends</h4>
 <button type="button" >Agree</button>
+</div>
 
-<img id ="young-women-driver.jpg" class= "image" src="young-women-driver.jpg">
-<h4>Israeli and Palestinian can be friends</h4>
-<button type="button" >Agree</button>
+<div class="photobox"><img id ="blackandwhite" class= "image" src="blackandwhite.jpg">
+<h4>We are all equal</h4>
+<button type="button" >Agree</button></div>
 
 
-<img id ="dancer" class= "image" src="dancer.jpg">
+<div class="photobox"><img id ="dancer" class= "image" src="dancer.jpg">
 <h4>Dance is for everyone</h4>
-<button type="button" >Agree</button>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="differnt_nationality" class= "image" src="differnt_nationality.jpg">
+<h4>Diffrent Nationality Same Human</h4>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="gay" class= "image" src="gay.jpeg">
+<h4>Respect The other</h4>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="girl_driver" class= "image" src="girl_driver.jpg">
+<h4>Great Driver</h4>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="religion" class= "image" src="religion.jpg">
+<h4>Just Believe</h4>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="smartblonde" class= "image" src="smartblonde.jpg">
+<h4>Amma Just Finished her Degree</h4>
+<button type="button" >Agree</button></div>
+
+<div class="photobox"><img id ="strong_girl" class= "image" src="strong_girl.jpeg">
+<h4>Girls Power</h4>
+<button type="button" >Agree</button></div>
 
 
 
