moved images to static

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -34,7 +34,7 @@
 <h4>Diffrent Nationality Same Human</h4>
 <button type="button" >Agree</button></div>
 
-<div class="photobox"><img id ="gay" class= "image" src="{{url_for('static', filename='gay.jpg')}}">
+<div class="photobox"><img id ="gay" class= "image" src="{{url_for('static', filename='GAYS.jpg')}}">
 <h4>Respect The other</h4>
 <button type="button" >Agree</button></div>
 
