--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -14,6 +14,10 @@
   
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='front_page.css') }}">
 
+
+<div class = "logo">
+<img class = "logo_image" src = "../static/logo.jpg" alt = "picture of logo"  height="50" width="70">
+</div>
   
 </head>
 <br>
