--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 <center>
 <h1>Register</h1>
 <img src="{{ url_for('static', filename='united_people.jpg') }}",  style="width:304px;height:228px;">
-<p id="slogan"> get ready to think different.....</p>
+<p id="slogan"> "get ready to think different..."</p>
 <form action="{{url_for('registration')}}" method="POST">
 first name<br>
 <input type="text" name="firstname">
@@ -31,11 +31,14 @@ email
 <h3>  break your stereotype : </h3>
  <select name="stereotype">
 
-<option value="womencanfight">women can fight</option>
-<option value="mencancook">men can cook</option>
-<option value="oldmendrivefast">old men drive fast</option>
-<option value="kidsareresponsibile">kids are responsibile</option>
-<option value="friendshiphasnocolor">friendship has no color</option>
+<option value="womencanfight">Women can fight</option>
+<option value="mencancook">Men can cook</option>
+<option value="oldmendrivefast">Old men drive fast</option>
+<option value="kidsareresponsibile">Kids are responsibile</option>
+<option value="friendshiphasnocolor">Friendship has no color</option>
+<option value="palestiniansandisraeliscanbefriends">Palestinians and Israelis can be friends</option>
+<option value="I accept LGBTs">I accept LGBTs</option>
+<option value="Religions won't seperate us">Religions won't seperate us</option>
 </select> 
 <br>
 <br>
@@ -44,6 +47,21 @@ email
 
 <p> year of birth</p>
  <select name="year">
+<option value="1975">1975</option>
+<option value="1976">1976</option>
+<option value="1977">1977</option>
+<option value="1978">1978</option>
+<option value="1979">1979</option>
+<option value="1980">1980</option>
+<option value="1981">1981</option>
+<option value="1982">1982</option>
+<option value="1983">1983</option>
+<option value="1984">1984</option>
+<option value="1985">1985</option>
+<option value="1986">1986</option>
+<option value="1987">1987</option>
+<option value="1988">1988</option>
+<option value="1989">1989</option>
 <option value="1990">1990</option>
 <option value="1991">1991</option>
 <option value="1992">1992</option>
@@ -59,6 +77,7 @@ email
 <option value="2002">2002</option>
 <option value="2003">2003</option>
 <option value="2004">2004</option>
+
 
 </select> 
 <p>month of birth</p>
