--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -22,10 +22,10 @@
 </head>
 <br>
 <body>
-<a href="{{ url_for('gotoregister')}}">sign up</a>
+<a href="{{ url_for('gotoregister')}}">Sign up</a>
 <br>
 
-<a href="{{ url_for('mainpage')}}">Goooo in....</a>
+<a href="{{ url_for('gotosignin')}}">Sign in</a>
 
 <p>
 <span id="H">H</span> <span id="l">ello,</span>
