--- a/templates/signin.html
+++ b/templates/signin.html
@@ -23,11 +23,16 @@ last name
 <input type="text" name="lastname">
 <br>
 
+<br>
+<button onclick="myfunction()">enter</button>
+<script>
+function myfunction(){
+if (firstname==first_name && lastname==last_name) 
 
+	{<a href="{{ url_for('mainpage')}}">ENTER:)</a>;}
+	else {print("user name or password wrong");}
 
-
-
-
+</script>
 
 
 
