--- a/static/signin.css
+++ b/static/signin.css
@@ -1,4 +1,8 @@
 body {
 	font-family: "Helvetica";
-	background-image:url('slik.jpg');
+	background-image:url('blue.jpg'); 
+	-webkit-background-size: cover; 
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;  
 }
