--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -19,64 +19,17 @@
 
 
 
-<!--{% for photo in photos %}
+{% for photo in photos %}
 
 
 <div class="photobox">
-	<img  class= "image" src="{{url_for('static', filename='photo.name')}}">
-	<h4>Israeli and Palestinian can be friends</h4>
+	<img  class= "image" src="{{url_for('static', filename=photo.name)}}">
+	<h4>{{photo.status}}</h4>
 	<button type="button" >Agree</button>
 </div>
 
 
-{%endfor%}-->
-
-
-
-
-
-<!-- photos -->
-<div class="photobox"><img  class= "image" src="{{url_for('static', filename='palastinian_and_israeli.jpg')}}">
-<h4>Israeli and Palestinian can be friends</h4>
-<in type="button" >Agree</button>
-</div>
-
-<div class="photobox"><img id ="blackandwhite" class= "image" src="{{url_for('static', filename='blackandwhite.jpg')}}">
-<h4>We are all equal</h4>
-<button type="button" >Agree</button></div>
-
-
-<div class="photobox"><img id ="dancer" class= "image" src="{{url_for('static', filename='dancer.jpg')}}">
-<h4>Dance is for everyone</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="differnt_nationality" class= "image" src="{{url_for('static', filename='differnt_nationality.jpg')}}">
-<h4>Diffrent Nationality Same Human</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="gay" class= "image" src="{{url_for('static', filename='GAYS.jpg')}}">
-<h4>Respect The other</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="girl_driver" class= "image" src="{{url_for('static', filename='girl_driver.jpg')}}">
-<h4>Great Driver</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="religion" class= "image" src="{{url_for('static', filename='religion.jpg')}}">
-<h4>Just Believe</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="smartblonde" class= "image" src="{{url_for('static', filename='smartblonde.jpg')}}">
-<h4>Amma Just Finished her Degree</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="strong_girl" class= "image" src="{{url_for('static', filename='strong_girl.jpg')}}">
-<h4>Girls Power</h4>
-<button type="button" >Agree</button></div>
-
-<div class="photobox"><img id ="oldmen" class= "image" src="{{url_for('static', filename='oldmen.jpg')}}">
-<h4>Olds= experience drivers</h4>
-<button type="button" >Agree</button></div>
+{%endfor%}
 
 
 
