--- a/static/main-page.css
+++ b/static/main-page.css
@@ -30,4 +30,5 @@ body {
     -webkit-background-size: cover;	
     -moz-background-size: cover;
     -o-background-size: cover;	
+    color :white;
 } 
