--- a/static/front_page.css
+++ b/static/front_page.css
@@ -8,7 +8,12 @@ body {
 h1 {
 	text-align: center;
 	font-size: 3em;
-	/*color: rgb(173,64,200);*/
+	font-family: helvetica, sans serif;
+}
+
+h3 {
+	text-align: center;
+	font-size: 2em;
 }
 
 #h {
